--- a/main/app/templates/index.html
+++ b/main/app/templates/index.html
@@ -3,29 +3,111 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- CSS-bootrap -->
+    <!-- Bootstrap 5 CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-
-    <title>INDEX</title>
+    <!-- Bootstrap Select CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css"
+    />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="../static/style.css" />
+    <title>TITLE</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Hello!</h1>
-      <br />
-      <button><a href="/test">Test</a></button>
-    </div>
-  </body>
+    <div class="container py-5">
+      <form method="POST" action="/playlists">
+        <!-- Input Multi-Select -->
+        <label for="input-playlists" class="form-label w-auto fs-4"
+          >Select playlists to choose tracks from</label
+        >
+        <br />
+        <select
+          name="input[]"
+          id="input-playlists"
+          class="selectpicker w-auto border border-black"
+          multiple
+          data-live-search="false"
+        >
+          {% for item in input_options %}
+          <option
+            value="{{ item.id }}"
+            {%
+            if
+            item.id
+            in
+            selected_input
+            %}selected{%
+            endif
+            %}
+          >
+            {{ item.name }}
+          </option>
+          {% endfor %}
+        </select>
 
-  <!-- JS-bootstrap -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"
-  ></script>
+        <!-- Output Multi-Select -->
+        <br />
+        <label for="output-playlists" class="form-label mt-4 w-auto fs-4"
+          >Select playlists to auto populate</label
+        >
+        <br />
+        <select
+          name="output[]"
+          id="output-playlists"
+          class="selectpicker w-auto"
+          multiple
+          data-live-search="false"
+        >
+          {% for item in output_options %}
+          <option
+            value="{{ item.id }}"
+            {%
+            if
+            item.id
+            in
+            selected_output
+            %}selected{%
+            endif
+            %}
+          >
+            {{ item.name }}
+          </option>
+          {% endfor %}
+        </select>
+
+        <br />
+        <div class="text-end">
+          <button type="submit" class="btn btn-primary mt-5">Submit</button>
+        </div>
+      </form>
+    </div>
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- jQuery (required for Bootstrap Select) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Bootstrap Select JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $(".selectpicker").selectpicker();
+      });
+    </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const buttons = document.querySelectorAll("button");
+        buttons.forEach((btn) => {
+          btn.classList.add("border", "border-2", "border-dark");
+        });
+      });
+    </script>
+  </body>
 </html>
