--- a/main/app/templates/index.html
+++ b/main/app/templates/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Test Dashboard-2</title>
     <!-- Bootstrap 5 CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -10,107 +12,128 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <!-- Bootstrap Select CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css"
-    />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../static/style.css" />
-    <title>TITLE</title>
   </head>
+
   <body>
-    <div class="container py-5">
-      <div class="title display-1 py-5 text-center fw-bold">TuneSort</div>
+    <div class="container">
       <form method="POST" action="/playlists">
-        <!-- Input Multi-Select -->
-        <label for="input-playlists" class="form-label w-auto fs-2 fw-bold"
-          >Select playlists to choose tracks from</label
+        <input type="hidden" name="selected_data" id="selectedData" />
+        <!-- INPUT PLAYLISTS -->
+        <label for="input_playlists" class="fs-1 fw-bolder uppercase"
+          >input playlists</label
         >
-        <br />
-        <select
-          name="input[]"
-          id="input-playlists"
-          class="selectpicker w-auto border border-black"
-          multiple
-          data-live-search="false"
+        <div
+          class="images d-flex justify-content-evenly flex-wrap align-items-between"
         >
-          {% for item in input_options %}
-          <option
-            value="{{ item.id }}"
-            {%
-            if
-            item.id
-            in
-            selected_input
-            %}selected{%
-            endif
-            %}
-          >
-            {{ item.name }}
-          </option>
-          {% endfor %}
-        </select>
-
-        <!-- Output Multi-Select -->
-        <br />
-        <label
-          for="output-playlists"
-          class="form-label mt-4 w-auto fs-2 fw-bold"
-          >Select playlists to auto populate</label
+          {% for playlist in playlists %} {% if not playlist.is_empty %}
+          <!-- IMAGE -->
+          <div class="my-3 mx-3">
+            <div
+              class="image_hover"
+              data-selected="false"
+              data-id="input_{{ playlist.id }}"
+              data-name="{{ playlist.name }}"
+              onclick="toggleSelection(this)"
+            >
+              <div class="image">
+                <img
+                  src="{% if 'http' in playlist.image %}{{ playlist.image }}{% else %}{{ url_for('static', filename='images/' ~ playlist.image) }}{% endif %}"
+                  alt="{{ playlist.name }}"
+                />
+                <div class="tick-icon"><!-- Tick Icon --></div>
+              </div>
+              <div class="inner_text">
+                <div class="text">
+                  <span class="fw-normal fs-3">{{ playlist.name }}</span>
+                  <div class="para uppercase fw-bolder fs-3">
+                    <p class="select-text">SELECT</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endif %} {% endfor %}
+        </div>
+        <!-- OUTPUT PLAYLISTS -->
+        <label for="output_playlists" class="fs-1 fw-bolder uppercase"
+          >output playlists</label
         >
-        <br />
-        <select
-          name="output[]"
-          id="output-playlists"
-          class="selectpicker w-auto"
-          multiple
-          data-live-search="false"
+        <div
+          class="images d-flex justify-content-evenly flex-wrap align-items-between"
         >
-          {% for item in output_options %}
-          <option
-            value="{{ item.id }}"
-            {%
-            if
-            item.id
-            in
-            selected_output
-            %}selected{%
-            endif
-            %}
-          >
-            {{ item.name }}
-          </option>
-          {% endfor %}
-        </select>
-
-        <br />
-        <div class="text-end">
-          <button type="submit" class="btn btn-primary mt-5">Submit</button>
+          {% for playlist in playlists %}{% if playlist.id != '1' %}
+          <!-- IMAGE -->
+          <div class="my-3 mx-3">
+            <div
+              class="image_hover"
+              data-selected="false"
+              data-id="output_{{ playlist.id }}"
+              data-name="{{ playlist.name }}"
+              onclick="toggleSelection(this)"
+            >
+              <div class="image">
+                <img
+                  src="{% if 'http' in playlist.image %}{{ playlist.image }}{% else %}{{ url_for('static', filename='images/' ~ playlist.image) }}{% endif %}"
+                  alt="{{ playlist.name }}"
+                />
+                <div class="tick-icon"><!-- Tick Icon --></div>
+              </div>
+              <div class="inner_text">
+                <div class="text">
+                  <span class="fw-normal fs-3">{{ playlist.name }}</span>
+                  <div class="para uppercase fw-bolder fs-3">
+                    <p class="select-text">SELECT</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endif %} {% endfor %}
+        </div>
+        <div class="d-grid gap-2 mx-3 my-2">
+          <button class="btn btn-primary btn-lg" type="submit">Submit</button>
         </div>
       </form>
     </div>
-    <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- jQuery (required for Bootstrap Select) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <!-- Bootstrap Select JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
-
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Custom JS -->
     <script>
-      $(document).ready(function () {
-        $(".selectpicker").selectpicker();
-      });
+      function toggleSelection(element) {
+        const isSelected = element.classList.toggle("selected");
+        element.setAttribute("data-selected", isSelected ? "true" : "false");
+
+        const selectText = element.querySelector(".select-text");
+        if (selectText) {
+          selectText.textContent = isSelected ? "SELECTED" : "SELECT";
+        }
+      }
     </script>
+    <!-- Custom JS -->
     <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const buttons = document.querySelectorAll("button");
-        buttons.forEach((btn) => {
-          btn.classList.add("border", "border-2", "border-dark", "btn-grad");
+      document
+        .querySelector("form")
+        .addEventListener("submit", function (event) {
+          const selectedElements = document.querySelectorAll(
+            ".image_hover.selected"
+          );
+          const selectedData = Array.from(selectedElements).map((el) => {
+            return {
+              id: el.getAttribute("data-id"),
+              name: el.getAttribute("data-name"),
+              selected: true,
+            };
+          });
+
+          document.getElementById("selectedData").value =
+            JSON.stringify(selectedData);
         });
-      });
     </script>
   </body>
 </html>
