add description section to home page template

--- a/main/app/templates/home.html
+++ b/main/app/templates/home.html
@@ -21,6 +21,7 @@
       <div class="title display-1 fw-bolder my-5 text-center text-gradient">
         TuneSort
       </div>
+      <div>Description</div>
     </div>
     <!-- Bootstrap JS -->
     <script
