update styles and layout for home and index pages; enhance gradients and animations

--- a/main/app/templates/home.html
+++ b/main/app/templates/home.html
@@ -18,10 +18,14 @@
 
   <body>
     <div class="container">
-      <div class="title display-1 fw-bolder my-5 text-center text-gradient">
-        TuneSort
+      <div class="content my-5">
+        <div class="title display-1 fw-bolder my-2 animated-gradient">
+          TuneSort
+        </div>
+        <div class="sub-title fw-normal display-6 my-2 animated-gradient">
+          Your music, your way.
+        </div>
       </div>
-      <div class="sub-title display-6 my-3">Your music, your way.</div>
       <div class="description fs-2 my-3">
         AI-powered sorting by mood, genre, language, and your unique taste.
       </div>
