--- a/main/app/static/style.css
+++ b/main/app/static/style.css
@@ -1,3 +1,29 @@
+:root {
+  --ls: clamp(-1.75px, -0.25vw, -3.5px);
+  --gradient-angle: 0deg;
+  --gradient-colors: linear-gradient(
+    var(--gradient-angle),
+    #000000,
+    #3d0000,
+    #950101,
+    #ff0000
+  );
+  --hover-gradient: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(218, 210, 255, 0.25) 25%,
+    rgba(178, 165, 255, 0.5) 50%,
+    rgba(73, 61, 158, 0.75) 75%
+  );
+  --background-gradient: linear-gradient(
+    var(--gradient-angle),
+    #c4dfdf,
+    #d2e9e9,
+    #e3f4f4,
+    #f8f6f4
+  );
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,8 +31,11 @@
 }
 
 body {
-  background-color: #2f3238;
-  color: #ffffff;
+  height: 100%;
+  width: 100%;
+  /* overflow: hidden; */
+  background: var(--background-gradient);
+  color: #000000;
 }
 
 .uppercase {
@@ -22,25 +51,17 @@ body {
 
 .image_hover:hover .inner_text,
 .image_hover.selected .inner_text {
-  background: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 204, 204, 0.25) 25%,
-    rgba(255, 179, 179, 0.5) 50%,
-    rgba(255, 153, 153, 0.75) 75%
-  );
+  background: var(--hover-gradient);
   border-radius: 50px;
 }
 
 .image_hover:hover .text,
 .image_hover.selected .text {
   top: 20%;
-  color: #ffffff;
 }
 
 .image_hover:hover .para,
 .image_hover.selected .para {
-  color: #ffffff;
   transform: translateY(50px);
   opacity: 1;
 }
@@ -56,7 +77,7 @@ body {
 img {
   max-width: 100%;
   height: auto;
-  opacity: 0.4;
+  opacity: 0.5;
   display: block;
 }
 
@@ -77,8 +98,6 @@ img {
   width: 100%;
   position: absolute;
   top: 40%;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: #ffffff;
   transition-duration: 0.4s;
 }
 
@@ -97,43 +116,36 @@ p {
 }
 
 .image_hover.selected {
-  background: linear-gradient(
-    to bottom,
-    rgba(140, 145, 155, 0) 0%,
-    rgba(140, 145, 155, 0.25) 25%,
-    rgba(140, 145, 155, 0.5) 50%,
-    rgba(140, 145, 155, 0.75) 75%
-  );
+  background: var(--hover-gradient);
   border-radius: 50px;
 }
 
-.tick-icon {
-  display: none;
-  position: absolute;
-  bottom: 8px;
-  right: 8px;
-  background-color: #28a745;
-  color: white;
-  border-radius: 50%;
-  font-size: 18px;
-  padding: 4px 6px;
+.content {
+  text-align: center;
 }
 
-.image_hover.selected .tick-icon {
-  display: block;
+.title {
+  letter-spacing: var(--ls);
+  position: relative;
+  margin: 0;
 }
 
-.text-gradient {
-  color: #592e2f;
-  background-image: linear-gradient(
-    45deg,
-    #ffffff,
-    #ffe5e5,
-    #ffcccc,
-    #ffb3b3,
-    #ff9999
-  );
-  background-clip: text;
+.animated-gradient {
+  background: var(--gradient-colors);
+  background-size: 200% 200%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  animation: gradient-move 5s ease-in-out infinite;
+}
+
+@keyframes gradient-move {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
