--- a/main/app/static/style.css
+++ b/main/app/static/style.css
@@ -1,19 +1,26 @@
 :root {
   --ls: clamp(-1.75px, -0.25vw, -3.5px);
   --gradient-angle: 0deg;
-  --gradient-colors: linear-gradient(
+  /* --gradient-colors: linear-gradient(
     var(--gradient-angle),
     #000000,
     #3d0000,
     #950101,
     #ff0000
+  ); */
+  --gradient-colors: linear-gradient(
+    var(--gradient-angle),
+    #5409da,
+    #4e71ff,
+    #8dd8ff,
+    #bbfbff
   );
   --hover-gradient: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0) 0%,
-    rgba(218, 210, 255, 0.25) 25%,
-    rgba(178, 165, 255, 0.5) 50%,
-    rgba(73, 61, 158, 0.75) 75%
+    rgba(187, 251, 255, 0.25) 25%,
+    rgba(141, 216, 255, 0.5) 50%,
+    rgba(78, 113, 255, 0.75) 75%
   );
   --background-gradient: linear-gradient(
     var(--gradient-angle),
@@ -38,32 +45,15 @@ body {
   color: #000000;
 }
 
-.uppercase {
-  text-transform: uppercase;
+p {
+  margin-bottom: 0px;
 }
 
-.image_hover {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.image_hover:hover .inner_text,
-.image_hover.selected .inner_text {
-  background: var(--hover-gradient);
-  border-radius: 50px;
-}
-
-.image_hover:hover .text,
-.image_hover.selected .text {
-  top: 20%;
-}
-
-.image_hover:hover .para,
-.image_hover.selected .para {
-  transform: translateY(50px);
+img {
+  max-width: 100%;
+  height: auto;
   opacity: 1;
+  display: block;
 }
 
 .image {
@@ -74,18 +64,22 @@ body {
   border-radius: 50px;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  opacity: 0.5;
+.width-225 {
+  width: 225px;
+  display: inline-block;
+}
+
+.image_hover {
+  cursor: pointer;
   display: block;
+  position: relative;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .inner_text {
   inset: 0;
   position: absolute;
-  top: 0;
-  left: 0;
   display: flex;
   justify-content: center;
   text-align: center;
@@ -94,11 +88,32 @@ img {
   border-radius: 50px;
 }
 
+.image_hover:hover .inner_text,
+.image_hover.selected .inner_text {
+  background: var(--hover-gradient);
+}
+
 .text {
   width: 100%;
   position: absolute;
-  top: 40%;
+  bottom: 0px;
   transition-duration: 0.4s;
+}
+
+.image_hover:hover .text,
+.image_hover.selected .text {
+  bottom: 173px;
+}
+
+.name {
+  padding: 5px;
+  border-radius: 0 0 50px 50px;
+  transition-duration: 0.4s;
+}
+
+.image_hover:hover .name,
+.image_hover.selected .name {
+  border-radius: 0;
 }
 
 .para {
@@ -106,13 +121,15 @@ img {
   height: auto;
   text-align: center;
   position: absolute;
-  transform: translateY(25px);
+  transform: translateY(0px);
   opacity: 0;
   transition-duration: 0.4s;
 }
 
-p {
-  margin-bottom: 0px;
+.image_hover:hover .para,
+.image_hover.selected .para {
+  transform: translateY(120px);
+  opacity: 1;
 }
 
 .image_hover.selected {
@@ -120,14 +137,23 @@ p {
   border-radius: 50px;
 }
 
+.select-text {
+  border-radius: 0 0 50px 50px;
+  padding: 5px;
+}
+
 .content {
   text-align: center;
 }
 
-.title {
+.title,
+.sub-title {
   letter-spacing: var(--ls);
-  position: relative;
-  margin: 0;
+}
+
+.create-playlist-input {
+  border: none;
+  height: 100%;
 }
 
 .animated-gradient {
@@ -140,12 +166,18 @@ p {
 
 @keyframes gradient-move {
   0% {
-    background-position: 0% 50%;
+    background-position: 0% 0%;
   }
-  50% {
+  25% {
     background-position: 100% 50%;
   }
-  100% {
+  50% {
+    background-position: 50% 100%;
+  }
+  75% {
     background-position: 0% 50%;
+  }
+  100% {
+    background-position: 0% 0%;
   }
 }
