--- a/main/app/templates/home.html
+++ b/main/app/templates/home.html
@@ -16,13 +16,11 @@
     <link rel="stylesheet" href="../static/style.css" />
   </head>
 
-  <body>
+  <body style="height: 100vh !important; overflow: hidden !important">
     <div class="container">
-      <div class="content my-5">
-        <div class="title display-1 fw-bolder my-2 animated-gradient">
-          TuneSort
-        </div>
-        <div class="sub-title fw-normal display-6 my-2 animated-gradient">
+      <div class="content my-5 animated-gradient">
+        <div class="title display-1 fw-bolder my-2 mx-auto">TuneSort</div>
+        <div class="sub-title fw-normal display-6 my-2 mx-auto">
           Your music, your way.
         </div>
       </div>
