--- a/main/app/templates/home.html
+++ b/main/app/templates/home.html
@@ -43,6 +43,11 @@
           and personalized.
         </p>
       </div>
+      <div class="d-grid gap-2 mx-0 my-2">
+        <button class="btn btn-lg animated-gradient-btn">
+          <a href="/playlists">To Dashboard</a>
+        </button>
+      </div>
     </div>
     <!-- Bootstrap JS -->
     <script
