--- a/main/app/templates/index.html
+++ b/main/app/templates/index.html
@@ -115,8 +115,13 @@
           </div>
         </div>
         <!-- SUBMIT BUTTON -->
-        <div class="d-grid gap-2 mx-3 my-2">
-          <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+        <div class="d-grid gap-2 mx-0 my-2">
+          <button
+            class="btn btn-primary btn-lg animated-gradient-btn"
+            type="submit"
+          >
+            Submit
+          </button>
         </div>
       </form>
     </div>
