--- a/main/app/templates/home.html
+++ b/main/app/templates/home.html
@@ -43,11 +43,13 @@
           and personalized.
         </p>
       </div>
-      <div class="d-grid gap-2 mx-0 my-2">
-        <button class="btn btn-lg animated-gradient-btn">
-          <a href="/playlists">To Dashboard</a>
-        </button>
-      </div>
+      <a href="/playlists">
+        <div class="d-grid gap-2 mx-0 my-2">
+          <button class="btn btn-lg animated-gradient-btn fw-bolder fs-5">
+            To Dashboard
+          </button>
+        </div>
+      </a>
     </div>
     <!-- Bootstrap JS -->
     <script
