--- a/main/app/templates/home.html
+++ b/main/app/templates/home.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../static/style.css" />
   </head>
 
-  <body style="height: 100vh !important; overflow: hidden !important">
+  <body>
     <div class="container">
       <div class="content my-5 animated-gradient">
         <div class="title display-1 fw-bolder my-2 mx-auto">TuneSort</div>
