--- a/main/app/templates/loading.html
+++ b/main/app/templates/loading.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="progress-container">
-        <div class="progress-bar"></div>
+        <div id="progress-bar" class="progress-bar"></div>
         <div class="progress-text">0%</div>
       </div>
 
